Stop pushing the performance_schema MySQL database
As it's not a real database! It's monitoring information about MySQL
presented as a special database.

--- a/hieradata_aws/class/integration/db_admin.yaml
+++ b/hieradata_aws/class/integration/db_admin.yaml
@@ -198,7 +198,7 @@ govuk_env_sync::tasks:
     url: "govuk-integration-database-backups"
     path: "mysql-backend"
   "push_performance_schema_integration_daily":
-    ensure: "present"
+    ensure: "absent"
     hour: "0"
     minute: "30"
     action: "push"
