allow unattended reboots during office-hours
we want to allow unattended reboots to occur during the day in staging
so that we are able to see the impact of changes as soon as possible.

--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -1111,3 +1111,5 @@ hosts::backend_migration::hosts:
     host_aliases:
       - ckan-1.backend
       - ckan-1
+
+unattended_reboot::cron_hour: "*"
