--- a/hieradata/staging.yaml
+++ b/hieradata/staging.yaml
@@ -588,3 +588,5 @@ router::nginx::robotstxt: |
 
 mongodb::s3backup::backup::s3_bucket: 'govuk-mongodb-backup-s3-staging'
 mongodb::s3backup::backup::s3_bucket_daily: 'govuk-mongodb-backup-s3-daily-staging'
+
+unattended_reboot::cron_hour: "*"
