--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -809,7 +809,14 @@ govuk_ci::master::pipeline_jobs:
   govuk_taxonomy_helpers: {}
   govuk_test: {}
   govuk-user-reviewer: {}
-  licensify: {}
+  licensify:
+    branches_to_exclude:
+      - 'release*'
+      - 'deployed-to-integration'
+      - 'deployed-to-staging'
+      - 'integration'
+      - 'staging'
+      - 'production'
   omniauth-gds: {}
   optic14n: {}
   performanceplatform-client.py: {}
