Add note to Licensify nginx config about matching upload size limits.

--- a/modules/licensify/templates/licensify-upload-vhost-aws.conf
+++ b/modules/licensify/templates/licensify-upload-vhost-aws.conf
@@ -18,7 +18,11 @@ server {
      return 444;
   }
 
-  # Handle larger upload sizes
+  # Handle larger upload sizes.
+  #
+  # WARNING: If you increase this, also increase the limits in
+  #          modules/clamav/files/etc/clamd.conf accordingly.
+  #
   client_max_body_size 100M;
 
   location / {
