add licensify apps to deploy_app jenkins job
Co-Authored-By: Chris <sengi@users.noreply.github.com>

--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -180,6 +180,9 @@ deployable_applications: &deployable_applications
   info-frontend: {}
   licencefinder:
     repository: 'licence-finder'
+  licensify: {}
+  licensify-admin: {}
+  licensify-feed: {}
   link-checker-api: {}
   local-links-manager: {}
   manuals-frontend: {}
