--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -54,6 +54,34 @@ govuk::apps::url_arbiter::db::backend_ip_range: '10.1.3.0/24'
 govuk::apps::whitehall::basic_auth_credentials: "%{hiera('http_username')}:%{hiera('http_password')}"
 govuk::apps::whitehall::highlight_words_to_avoid: true
 
+licensify::apps::configfile::mongo_database_hosts: 'licensing-mongo-1,licensing-mongo-2,licensing-mongo-3'
+licensify::apps::configfile::mongo_database_reference_name: 'licensify-refdata'
+licensify::apps::configfile::mongo_database_audit_name: 'licensify-audit'
+licensify::apps::configfile::mongo_database_slaveok: 'false'
+licensify::apps::configfile::places_api_url: 'http://places-api:9700/places'
+licensify::apps::configfile::feed_actor: 'true'
+licensify::apps::configfile::oauth_callback_url_override: 'https://licensify-admin.integration.publishing.service.gov.uk/licence-management/admin/oauth'
+licensify::apps::configfile::upload_url_base: 'https://uploadlicence.integration.publishing.service.gov.uk/'
+licensify::apps::configfile::elms_frontend_host: 'https://www-origin.integration.publishing.service.gov.uk/'
+licensify::apps::configfile::elms_admin_host: 'https://licensify-admin.integration.publishing.service.gov.uk/'
+licensify::apps::configfile::elms_max_app_process_attempt_count: '6'
+licensify::apps::configfile::access_token_url: 'https://signon.integration.publishing.service.gov.uk/oauth/access_token'
+licensify::apps::configfile::authorization_url: 'https://signon.integration.publishing.service.gov.uk/oauth/authorize'
+licensify::apps::configfile::user_details_url: 'https://signon.integration.publishing.service.gov.uk/user.json'
+licensify::apps::configfile::google_analytics_account_admin: 'UA-34519962-2'
+licensify::apps::configfile::google_analytics_domain_admin: 'integration.publishing.service.gov.uk'
+licensify::apps::configfile::google_analytics_account_frontend: 'UA-34519962-1'
+licensify::apps::configfile::google_analytics_domain_frontend: 'integration.publishing.service.gov.uk'
+licensify::apps::configfile::signon_url: 'https://signon.integration.publishing.service.gov.uk'
+licensify::apps::configfile::payments_test_mode: 'true'
+licensify::apps::configfile::no_reply_mail_address: 'noreply-licensing-preview@digital.cabinet-office.gov.uk'
+licensify::apps::configfile::govuk_url: 'https://www-origin.integration.publishing.service.gov.uk'
+licensify::apps::configfile::licence_finder_url: 'https://www-origin.integration.publishing.service.gov.uk/licence-finder'
+licensify::apps::configfile::scheduled_virus_scan_cron_expression: '0 0 16 * * ?'
+licensify::apps::configfile::performance_data_sender_cron_expression: '0 0 1 * * ?'
+licensify::apps::configfile::performance_platform_service_url: 'https://www.integration.performance.service.gov.uk/data/licensing/application'
+licensify::apps::configfile::is_master_node: 'true'
+
 govuk_search::monitoring::es_port: '80'
 govuk_search::monitoring::es_host: 'elasticsearch5.blue.integration.govuk-internal.digital'
 
