--- a/hieradata_aws/class/staging/rabbitmq.yaml
+++ b/hieradata_aws/class/staging/rabbitmq.yaml
@@ -3,4 +3,5 @@
 govuk_rabbitmq::federate::federation_user: 'root'
 govuk_rabbitmq::federate::federation_pass: "%{hiera('govuk_rabbitmq::root_password')}"
 govuk_rabbitmq::federate::upstream_servers: ['10.2.3.70', '10.2.3.71', '10.2.3.72']
+govuk_rabbitmq::federate::upstream_name: 'carrenza'
 govuk_rabbitmq::federate::federation_exchange: 'published_documents'
