--- a/hieradata/staging.yaml
+++ b/hieradata/staging.yaml
@@ -522,6 +522,8 @@ hosts::production::router::hosts:
 licensify::apps::licensify_admin::environment: 'staging'
 licensify::apps::licensify::environment: 'staging'
 licensify::apps::licensify_feed::environment: 'staging'
+licensify::apps::licensify::alert_5xx_warning_rate: 0.1
+licensify::apps::licensify::alert_5xx_critical_rate: 0.15
 
 monitoring::checks::aws_origin_domain: "staging.govuk.digital"
 monitoring::checks::sidekiq::enable_support_check: false
