--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -222,6 +222,8 @@ grafana::dashboards::machine_suffix_metrics: '_staging'
 licensify::apps::licensify_admin::environment: 'staging'
 licensify::apps::licensify::environment: 'staging'
 licensify::apps::licensify_feed::environment: 'staging'
+licensify::apps::licensify::alert_5xx_warning_rate: 0.1
+licensify::apps::licensify::alert_5xx_critical_rate: 0.15
 
 monitoring::checks::aws_origin_domain: "staging.govuk.digital"
 monitoring::checks::datagovuk_publish::ensure: 'present'
