add mongodb tools and shell to licensing backend, frontend and db_admin

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -692,6 +692,10 @@ govuk::node::s_db_admin::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
 
 govuk::node::s_graphite::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
 
+govuk::node::s_licensing_backend::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
+
+govuk::node::s_licensing_frontend::apt_mirror_hostname: "%{hiera('apt_mirror_hostname')}"
+
 govuk::node::s_licensify_lb::backend_app_servers:
   - 'licensing-backend-1.licensify'
   - 'licensing-backend-2.licensify'
