--- a/hieradata_aws/training.yaml
+++ b/hieradata_aws/training.yaml
@@ -41,6 +41,7 @@ govuk::apps::kibana::logit_environment: 2694f14b-6519-4607-81f2-8a2130e5aaec
 govuk::apps::link_checker_api::govuk_basic_auth_credentials: "%{hiera('http_username')}:%{hiera('http_password')}"
 govuk::apps::publishing_api::event_log_aws_bucketname: 'govuk-publishing-api-event-log-training'
 govuk::apps::publishing_api::content_api_prototype: true
+govuk::apps::router::sentry_environment: 'training'
 govuk::apps::short_url_manager::instance_name: 'training'
 govuk::apps::signon::instance_name: 'training'
 govuk::apps::smartanswers::expose_govspeak: true
