--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -195,6 +195,8 @@ icinga::client::check_cputype::cputype: 'amd'
 licensify::apps::licensify_admin::environment: 'integration'
 licensify::apps::licensify::environment: 'integration'
 licensify::apps::licensify_feed::environment: 'integration'
+licensify::apps::licensify::alert_5xx_warning_rate: 0.1
+licensify::apps::licensify::alert_5xx_critical_rate: 0.15
 
 monitoring::ci_environment: true
 monitoring::checks::aws_origin_domain: "integration.govuk.digital"
