--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -230,6 +230,7 @@ users::usernames:
   - deanwilson
   - deborahchua
   - dilwoarhussain
+  - eamonnmcelroy
   - edwardkerry
   - emmabeynon
   - erinrajstaniland
