--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -452,6 +452,7 @@ users::usernames:
   - deanwilson
   - deborahchua
   - dilwoarhussain
+  - eamonnmcelroy
   - edwardkerry
   - emmabeynon
   - erinrajstaniland
