--- a/hieradata_aws/integration.yaml
+++ b/hieradata_aws/integration.yaml
@@ -55,10 +55,10 @@ govuk::apps::url_arbiter::db::backend_ip_range: '10.1.3.0/24'
 govuk::apps::whitehall::basic_auth_credentials: "%{hiera('http_username')}:%{hiera('http_password')}"
 govuk::apps::whitehall::highlight_words_to_avoid: true
 
-licensify::apps::configfile::mongo_database_hosts: 'licensing-mongo-1,licensing-mongo-2,licensing-mongo-3'
 licensify::apps::configfile::mongo_database_reference_name: 'licensify-refdata'
 licensify::apps::configfile::mongo_database_audit_name: 'licensify-audit'
 licensify::apps::configfile::mongo_database_slaveok: 'false'
+licensify::apps::configfile::mongo_database_auth_enabled: true
 licensify::apps::configfile::places_api_url: 'http://places-api:9700/places'
 licensify::apps::configfile::feed_actor: 'true'
 licensify::apps::configfile::oauth_callback_url_override: 'https://licensify-admin.integration.publishing.service.gov.uk/licence-management/admin/oauth'
