govuk_env_sync support for documentdb
mongodb is being replaced by documentdb in AWS so govuk_env_sync show have support for it

While we lay the configuration to pull licensify from staging daily is there, this is
not yet activated because the data is contains some incompatible record.
They have been tested to work in integration.

Further testing for licensify-audit is required as it sometimes fail if an app
recreates a collection which the govuk_env_sync is trying to do so too.

--- a/hieradata_aws/class/integration/db_admin.yaml
+++ b/hieradata_aws/class/integration/db_admin.yaml
@@ -241,3 +241,20 @@ govuk_env_sync::tasks:
     temppath: "/tmp/whitehall_production"
     url: "govuk-integration-database-backups"
     path: "mysql-backend"
+  "pull_licensify_integration_daily": &pull_licensify
+    ensure: absent
+    hour: '4'
+    minute: '0'
+    action: pull
+    dbms: documentdb
+    storagebackend: s3
+    database: licensify
+    temppath: /var/lib/documentdb/.dumps
+    url: govuk-staging-database-backups
+    path: mongo-licensing
+  "pull_licensify_audit_integration_daily":
+    <<: *pull_licensify
+    database: licensify-audit
+  "pull_licensify_refdata_integration_daily":
+    <<: *pull_licensify
+    database: licensify-refdata
