--- a/hieradata/class/staging/rabbitmq.yaml
+++ b/hieradata/class/staging/rabbitmq.yaml
@@ -1,5 +1,6 @@
 ---
 
+govuk_rabbitmq::federation: 'yes'
 govuk_rabbitmq::federate::federation_user: 'root'
 govuk_rabbitmq::federate::federation_pass: "%{hiera('govuk_rabbitmq::root_password')}"
 govuk_rabbitmq::federate::upstream_servers: ['10.12.13.20', '10.12.14.20', '10.12.15.20']
