--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -479,6 +479,7 @@ govuk::apps::email_alert_api::email_address_override_whitelist:
   - kevin.dew@digital.cabinet-office.gov.uk
   - michael.s.walker@digital.cabinet-office.gov.uk
   - steve.messer@digital.cabinet-office.gov.uk
+  - tim.blair@digital.cabinet-office.gov.uk
   - thomas.leese@digital.cabinet-office.gov.uk
 
 govuk::apps::email_alert_service::enabled: true
