--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -477,6 +477,7 @@ govuk::apps::email_alert_api::email_address_override_whitelist:
   - deborah.chua@digital.cabinet-office.gov.uk
   - edward.kerry@digital.cabinet-office.gov.uk
   - kevin.dew@digital.cabinet-office.gov.uk
+  - leanne.cummings@digital.cabinet-office.gov.uk
   - michael.s.walker@digital.cabinet-office.gov.uk
   - steve.messer@digital.cabinet-office.gov.uk
   - tim.blair@digital.cabinet-office.gov.uk
