--- a/hieradata_aws/production.yaml
+++ b/hieradata_aws/production.yaml
@@ -136,6 +136,11 @@ govuk::apps::email_alert_api::email_archive_s3_bucket: 'govuk-production-email-a
 # This shouldn't be enabled at the same time we have carrenza s3 export enabled unless they have separate buckets
 govuk::apps::email_alert_api::email_archive_s3_enabled: false
 govuk::apps::email_alert_api::govuk_notify_template_id: '76d21ce7-54c3-4fb7-8830-ba3b79287985'
+
+govuk::apps::finder_frontend::nagios_memory_warning: 4000
+govuk::apps::finder_frontend::nagios_memory_critical: 5000
+govuk::apps::finder_frontend::unicorn_worker_processes: "12"
+
 govuk::apps::hmrc_manuals_api::publish_topics: false
 govuk::apps::kibana::logit_environment: 283f08f6-d117-48df-9667-c4aa492b81f9
 govuk::apps::link_checker_api::govuk_basic_auth_credentials: "%{hiera('http_username')}:%{hiera('http_password')}"
