--- a/hieradata/staging.yaml
+++ b/hieradata/staging.yaml
@@ -31,6 +31,11 @@ govuk::apps::email_alert_api::email_address_override: 'success@simulator.amazons
 govuk::apps::email_alert_api::email_address_override_whitelist_only: true
 govuk::apps::email_alert_api::delivery_request_threshold: "3000"
 govuk::apps::email_alert_frontend::subscription_management_enabled: true
+
+govuk::apps::finder_frontend::nagios_memory_warning: 4000
+govuk::apps::finder_frontend::nagios_memory_critical: 5000
+govuk::apps::finder_frontend::unicorn_worker_processes: "12"
+
 govuk::apps::hmrc_manuals_api::publish_topics: false
 govuk::apps::imminence::ensure: 'absent'
 govuk::apps::government-frontend::cpu_warning: 200
