--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -135,6 +135,10 @@ govuk::apps::email_alert_api::email_address_override_whitelist_only: true
 govuk::apps::email_alert_api::delivery_request_threshold: "3000"
 govuk::apps::email_alert_frontend::subscription_management_enabled: true
 
+govuk::apps::finder_frontend::nagios_memory_warning: 4000
+govuk::apps::finder_frontend::nagios_memory_critical: 5000
+govuk::apps::finder_frontend::unicorn_worker_processes: "12"
+
 govuk::apps::hmrc_manuals_api::publish_topics: false
 govuk::apps::kibana::logit_environment: b13bfb70-e07a-473b-9903-02e806ebd045
 govuk::apps::link_checker_api::govuk_basic_auth_credentials: "%{hiera('http_username')}:%{hiera('http_password')}"
