--- a/hieradata_aws/class/staging/rabbitmq.yaml
+++ b/hieradata_aws/class/staging/rabbitmq.yaml
@@ -1,5 +1,11 @@
 ---
 
+govuk::node::s_rabbitmq::apps_using_rabbitmq:
+  - content_data_api
+  - cache_clearing_service
+  - publishing_api
+  - search_api
+
 govuk_rabbitmq::federation: 'yes'
 govuk_rabbitmq::federate::federation_user: 'root'
 govuk_rabbitmq::federate::federation_pass: "%{hiera('govuk_rabbitmq::root_password')}"
