--- a/hieradata_aws/staging.yaml
+++ b/hieradata_aws/staging.yaml
@@ -224,6 +224,42 @@ govuk_sudo::sudo_conf:
 
 grafana::dashboards::machine_suffix_metrics: '_staging'
 
+licensify::apps::configfile::mongo_database_reference_name: 'licensify-refdata'
+licensify::apps::configfile::mongo_database_audit_name: 'licensify-audit'
+licensify::apps::configfile::mongo_database_slaveok: 'false'
+licensify::apps::configfile::mongo_database_auth_enabled: true
+licensify::apps::configfile::feed_actor: 'true'
+licensify::apps::configfile::oauth_callback_url_override: 'https://licensify-admin.staging.publishing.service.gov.uk/licence-management/admin/oauth'
+licensify::apps::configfile::upload_url_base: 'https://uploadlicence.staging.publishing.service.gov.uk/'
+licensify::apps::configfile::elms_frontend_host: 'https://www-origin.staging.publishing.service.gov.uk/'
+licensify::apps::configfile::elms_admin_host: 'https://licensify-admin.staging.publishing.service.gov.uk/'
+licensify::apps::configfile::elms_max_app_process_attempt_count: '6'
+licensify::apps::configfile::access_token_url: 'https://signon.staging.publishing.service.gov.uk/oauth/access_token'
+licensify::apps::configfile::authorization_url: 'https://signon.staging.publishing.service.gov.uk/oauth/authorize'
+licensify::apps::configfile::user_details_url: 'https://signon.staging.publishing.service.gov.uk/user.json'
+licensify::apps::configfile::google_analytics_account_admin: 'UA-34519962-2'
+licensify::apps::configfile::google_analytics_domain_admin: 'staging.publishing.service.gov.uk'
+licensify::apps::configfile::google_analytics_account_frontend: 'UA-26179049-1'
+licensify::apps::configfile::google_analytics_domain_frontend: 'staging.publishing.service.gov.uk'
+licensify::apps::configfile::no_reply_mail_address: 'noreply-licensing+staging@digital.cabinet-office.gov.uk'
+licensify::apps::configfile::performance_data_sender_cron_expression: '0 0 1 * * ?'
+licensify::apps::configfile::performance_platform_service_url: 'https://www.staging.performance.service.gov.uk/data/licensing/application'
+licensify::apps::configfile::is_master_node: 'true'
+
+licensify::apps::configfile::email_override_recipient: 'licensing-notifications+staging@digital.cabinet-office.gov.uk'
+licensify::apps::configfile::email_periodic_enabled: 'true'
+licensify::apps::configfile::licenceApplication_expirationPeriod: '7'
+licensify::apps::configfile::notify_periodic_email_cron: '0 0 6 3 * ?'
+licensify::apps::configfile::notify_template_applicant_none: 'f324cd8c-a0b1-48fa-b009-69bdf8ba81b0'
+licensify::apps::configfile::notify_template_applicant_offline: 'bbbc408b-4276-498f-9d94-8f76663b258e'
+licensify::apps::configfile::notify_template_applicant_online: '8ca00761-7902-4ec3-89a2-e3aa006d3ed8'
+licensify::apps::configfile::notify_template_authority: '96af61a3-ffdc-419c-a814-9ce01a78a87f'
+licensify::apps::configfile::notify_template_periodic: 'a3a54578-2695-4953-9787-d7c73aaf08c0'
+licensify::apps::configfile::uncollected_expiry_cron: '0 0 4 * * ?'
+licensify::apps::configfile::uncollected_expiry_enabled: 'true'
+licensify::apps::configfile::uncollected_expiry_purge_days: '7'
+licensify::apps::configfile::uncollected_expiry_start_days: '90'
+
 licensify::apps::licensify_admin::environment: 'staging'
 licensify::apps::licensify::environment: 'staging'
 licensify::apps::licensify_feed::environment: 'staging'
