--- a/hieradata_aws/class/integration/db_admin.yaml
+++ b/hieradata_aws/class/integration/db_admin.yaml
@@ -241,20 +241,22 @@ govuk_env_sync::tasks:
     temppath: "/tmp/whitehall_production"
     url: "govuk-integration-database-backups"
     path: "mysql-backend"
-  "pull_licensify_integration_daily": &pull_licensify
-    ensure: absent
-    hour: '4'
-    minute: '0'
-    action: pull
-    dbms: documentdb
-    storagebackend: s3
-    database: licensify
-    temppath: /var/lib/documentdb/.dumps
-    url: govuk-staging-database-backups
-    path: mongo-licensing
-  "pull_licensify_audit_integration_daily":
+  "pull_licensify_staging_daily": &pull_licensify
+    ensure: "present"
+    hour: "5"
+    minute: "45"
+    action: "pull"
+    dbms: "documentdb"
+    storagebackend: "s3"
+    database: "licensify"
+    temppath: "/tmp/licensify_staging"
+    url: "govuk-staging-database-backups"
+    path: "mongo-licensing"
+  "pull_licensify_audit_staging_daily":
     <<: *pull_licensify
-    database: licensify-audit
-  "pull_licensify_refdata_integration_daily":
+    database: "licensify-audit"
+    hour: "6"
+    minute: "0"
+  "pull_licensify_refdata_staging_daily":
     <<: *pull_licensify
-    database: licensify-refdata
+    database: "licensify-refdata"
