add option for puppet not to manage clamav running state
In some situations, clamav should only be set to run when its functionality
is needed. E.g. runninng licensify integration tests on the CI box.
Hence, we need to add an option for puppet to install clamav on the CI box
but not to manage its running state which will be managed by the
tasks which need clamav.

--- a/hieradata/node/ci-agent-5.ci.integration.publishing.service.gov.uk.yaml
+++ b/hieradata/node/ci-agent-5.ci.integration.publishing.service.gov.uk.yaml
@@ -1,3 +1,7 @@
 ---
 govuk_containers::elasticsearch::primary::enable: false
 govuk_containers::elasticsearch::secondary::enable: false
+
+# prevents puppet stopping the service which is does by default as
+# clamav::use_service is set to false for it
+clamav::service::puppet_lifecycle_enable: false
