Exclude stateful Licensify requests from Staging->Integration replay too.

--- a/hieradata_aws/class/staging/cache.yaml
+++ b/hieradata_aws/class/staging/cache.yaml
@@ -4,3 +4,7 @@ nginx::logging::days_to_keep: 7
 router::gor::add_hosts: false
 router::gor::replay_targets:
   'www-origin.integration.publishing.service.gov.uk': {}
+router::gor::http_disallow_url:
+  - 'apply-for-a-licence/payment'
+  - 'apply-for-a-licence/redirect'
+  - 'apply-for-a-licence/uploaded'
