remove unneccesary backups in for licensity in staging
Licensify staging has been migrated to AWS so switch off govuk_env_sync in UKCloud Staging for licensity. In addition, switcth off  `automongodbbackup` for licensify because govuk_env_sync is used.

--- a/hieradata/node/licensing-mongo-1.licensify.staging.publishing.service.gov.uk.yaml
+++ b/hieradata/node/licensing-mongo-1.licensify.staging.publishing.service.gov.uk.yaml
@@ -1,6 +1,6 @@
 govuk_env_sync::tasks:
   push_licensify: &push_licensify
-    ensure: present
+    ensure: absent
     hour: '4'
     minute: '0'
     action: push
