--- a/hieradata/node/licensing-mongo-2.licensify.staging.publishing.service.gov.uk.yaml
+++ b/hieradata/node/licensing-mongo-2.licensify.staging.publishing.service.gov.uk.yaml
@@ -1,6 +1,1 @@
-mongodb::backup::s3_backups: true
-mongodb::s3backup::cron::realtime_hour:
- - 5
- - 14
- - 19
-mongodb::s3backup::cron::realtime_minute: '0'
+mongodb::backup::enabled: false
